# CurioMesh

./: .gitignore  LICENSE  README.md  __init__.py  bridge.py  build_windows.bat  metrics.py  operators.py  textures.py  ui.py
core/: CMakeLists.txt  curio_core.cpp  pybind_module.cpp  quix_core.cpp
tests/: blender_smoke.py  run_blender_tests.ps1  triadq_smoke.py
triadq/: __init__.py  __main__.py  engine.py  io.py  types.py
